downgrade to jre1.4